--- a/app/consultation.html
+++ b/app/consultation.html
@@ -2053,7 +2053,7 @@
                                     Подробнее
                                 </div>
                             </a>
-                            <a class="services__small-item wow" data-wow-delay=".1s"
+                            <a class="services__small-item wow"
                                 href="https://nutri.stylista.ru/decryption"
                                 title="Узнать подробнее или заказать услугу">
                                 <div class="small-item__inner">
@@ -2066,7 +2066,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a class="services__small-item wow" data-wow-delay=".2s"
+                            <a class="services__small-item wow"
                                 href="https://nutri.stylista.ru/escort" title="Узнать подробнее или заказать услугу">
                                 <div class="small-item__inner">
                                     <img class="small-item__photo" src="images/services-3.jpg" alt="">
@@ -2078,7 +2078,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a class="services__small-item wow" data-wow-delay=".3s"
+                            <a class="services__small-item wow"
                                 href="https://nutri.stylista.ru/development"
                                 title="Узнать подробнее или заказать услугу">
                                 <div class="small-item__inner">
@@ -2091,7 +2091,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a class="services__small-item wow" data-wow-delay=".4s"
+                            <a class="services__small-item wow""
                                 href="https://nutri.stylista.ru/training" title="Узнать подробнее или заказать услугу">
                                 <div class="small-item__inner">
                                     <img class="small-item__photo" src="images/services-5.jpg" alt="">
