--- a/app/escort.html
+++ b/app/escort.html
@@ -2053,7 +2053,7 @@
                                     Подробнее
                                 </div>
                             </a>
-                            <a class="services__small-item wow" data-wow-delay=".1s"
+                            <a class="services__small-item wow"
                                 href="https://nutri.stylista.ru/decryption" title="Узнать подробнее или заказать услугу">
                                 <div class="small-item__inner">
                                     <img class="small-item__photo" src="images/services-2.jpg" alt="">
@@ -2065,7 +2065,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a class="services__small-item wow" data-wow-delay=".2s"
+                            <a class="services__small-item wow"
                                 href="https://nutri.stylista.ru/escort" title="Узнать подробнее или заказать услугу">
                                 <div class="small-item__inner">
                                     <img class="small-item__photo" src="images/services-3.jpg" alt="">
@@ -2077,7 +2077,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a class="services__small-item wow" data-wow-delay=".3s"
+                            <a class="services__small-item wow"
                                 href="https://nutri.stylista.ru/development"
                                 title="Узнать подробнее или заказать услугу">
                                 <div class="small-item__inner">
@@ -2090,7 +2090,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a class="services__small-item wow" data-wow-delay=".4s"
+                            <a class="services__small-item wow"
                                 href="https://nutri.stylista.ru/training" title="Узнать подробнее или заказать услугу">
                                 <div class="small-item__inner">
                                     <img class="small-item__photo" src="images/services-5.jpg" alt="">
