fix error path 2

--- a/app/development.html
+++ b/app/development.html
@@ -672,7 +672,7 @@
                                                             (БАДы)</label>
                                                     </div>
                                                     <div class="checkbox-questionnarie">
-                                                        <input class="checkbox__input" id="checkbox80" name="Травы">
+                                                        <input class="checkbox__input" id="checkbox80" name="Травы" type="checkbox">
                                                         <label for="checkbox80" class="checkbox__label">Травы</label>
                                                     </div>
                                                     <div class="checkbox-questionnarie">
@@ -733,7 +733,7 @@
                                                     </div>
                                                     <div class="checkbox-questionnarie">
                                                         <input class="checkbox__input" id="checkbox89"
-                                                            name="рано встаю">
+                                                            name="рано встаю" type="checkbox">
                                                         <label for="checkbox89" class="checkbox__label">рано
                                                             встаю</label>
                                                     </div>
@@ -810,16 +810,16 @@
                                                             мл в день</label>
                                                     </div>
                                                     <div class="checkbox-questionnarie">
-                                                        <input class="checkbox__input" id="checkbox75" name="alcohol"
+                                                        <input class="checkbox__input" id="checkbox184" name="alcohol"
                                                             type="radio"
                                                             value="крепкие спиртные напитки, каждый день более 100 мл">
-                                                        <label for="checkbox75" class="checkbox__label">крепкие спиртные
+                                                        <label for="checkbox184" class="checkbox__label">крепкие спиртные
                                                             напитки, каждый день более 100 мл</label>
                                                     </div>
                                                     <div class="checkbox-questionnarie">
-                                                        <input class="checkbox__input" id="checkbox76" name="alcohol"
+                                                        <input class="checkbox__input" id="checkbox183" name="alcohol"
                                                             type="radio" value="не употребляю">
-                                                        <label for="checkbox76" class="checkbox__label">не
+                                                        <label for="checkbox183" class="checkbox__label">не
                                                             употребляю</label>
                                                     </div>
                                                 </div>
@@ -1021,7 +1021,7 @@
                                                     <div class="checkbox-questionnarie">
                                                         <input class="checkbox__input" id="checkbox116" name="кровоточивость десен, кровотечения из носа"
                                                             type="checkbox">
-                                                        <label for="checkbox116" class="checkbox__label">некровоточивость десен, кровотечения из носат</label>
+                                                        <label for="checkbox116" class="checkbox__label">некровоточивость десен, кровотечения из носа</label>
                                                     </div>
                                                     <div class="checkbox-questionnarie">
                                                         <input class="checkbox__input" id="checkbox117" name="варикозное расширение вен"
@@ -1378,9 +1378,9 @@
                                                         <label for="checkbox182" class="checkbox__label">заменители сахара</label>
                                                     </div>
                                                     <div class="checkbox-questionnarie">
-                                                        <input class="checkbox__input" id="checkbox182" name="никаких источноков сахара"
+                                                        <input class="checkbox__input" id="checkbox185" name="никаких источноков сахара"
                                                             type="checkbox">
-                                                        <label for="checkbox182" class="checkbox__label">никаких</label>
+                                                        <label for="checkbox185" class="checkbox__label">никаких</label>
                                                     </div>
                                                 </div>
                                                 <div class="form__item">
